# ttms

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TTMS.c  io.h  temp.c  utf-8.py  每天任务.txt
.github/workflows/: cmake.yml  codeql-analysis.yml  formatter.yml  main.yml
Common/: Common.c  Common.h  List.h  TimeLegal.c  TimeLegal.h  common.c  listTestDrv.c  listTestDrv.h
Persistence/: Account_Persist.c  Account_Persist.h  EntityKey_Persist.c  EntityKey_Persist.h  Play_Persist.c  Play_Persist.h  Sale_Persist.c  Sale_Persist.h  Schedule_Persist.c  Schedule_Persist.h  Schedule_Persist_Qry.c  Schedule_Persist_Qry.h  Seat_Persist.c  Seat_Persist.h  Studio_Persist.c  Studio_Persist.h  Ticket_Persist.c  Ticket_Persist.h
Service/: Account.c  Account.h  Play.c  Play.h  Sale.c  Sale.h  Salesanalysis.c  Salesanalysis.h  Schedule.c  Schedule.h  Schedule_Qry.c  Schedule_Qry.h  Seat.c  Seat.h  StaSales.c  StaSales.h  Studio.c  Studio.h  Ticket.c  Ticket.h
View/: Account_UI.c  Account_UI.h  MaiAccount.c  MaiAccount_UI.c  MaiAccount_UI.h  Main_Menu.c  Main_Menu.h  Play_UI.c  Play_UI.h  Sale_UI.c  Sale_UI.h  Salesanalysis_UI.c  Salesanalysis_UI.h  Schedule_Qry_UI.c  Schedule_Qry_UI.h  Schedule_UI.c  Schedule_UI.h  Seat_UI.c  Seat_UI.h  StaSales_UI.c  StaSales_UI.h  Studio_UI.c  Studio_UI.h  TTMS_SSF_StaSales_Srv_Head.h  TTMS_SSF_StaSales_UI_Head.h  Ticket_UI.c  Ticket_UI.h
